# fdf3

./: CMakeLists.txt  Makefile  a.out  draw.c  draw2.c  fdf  fdf.h  fdf_utils.c  fdf_utils2.c  fdf_utils3.c  main  main.c
get_next_line/: Makefile  get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
maps/: 10-2.fdf  10-70.fdf  20-60.fdf  50-4.fdf  basictest.fdf  elem.fdf  julia.fdf  mars.fdf  pylone.fdf  small-f.fdf  small.fdf
